--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ theme:
     - navigation.tracking
     # 使用 Tab 来进行分类
     # https://squidfunk.github.io/mkdocs-material/setup/setting-up-navigation/#navigation-tabs
-    # - navigation.tabs
+    - navigation.tabs
     # 导航部分
     # https://squidfunk.github.io/mkdocs-material/setup/setting-up-navigation/#navigation-sections
     # - navigation.sections
