--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,12 +8,12 @@ site_description: 梅尔菲斯的个人网站
 # [Navigtion]
 nav:
   - Doris:
-    - Doris vs Clickhouse.md
-    - Doris 3.x vs Doris 2.X.md
+    - documents/Doris/Doris vs Clickhouse.md
+    - documents/Doris/Doris 3.x vs Doris 2.X.md
     - Apache Doris 中文手册 v3.0
       - 1 安装部署
         - 1.1 源码编译
-          - 1.1.1 使用 Docker 开发镜像编译（推荐）.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
         - 1.2 集群部署
       - 2 数据库连接
       - 3 数据表设计
