--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,12 @@ nav:
         - documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.8 Schema 变更.md
         - documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.9 自增列.md
         - documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
-      # - 4 数据操作:
+      - 4 数据操作:
+        - 4.1 数据导入:
+          - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.1 导入概览.md
+          - 4.1.2 导入方式:
+            - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.1 Stream Load.md
+            - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.2 Broker Load.md
 
 # [UI]
 # [top]
