--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,9 @@ nav:
             - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
           - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.3 导入数据格式.md
           - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.4 错误数据处理.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.5 数据转换.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.6 导入高可用性.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.7 从其他 AP 系统迁移数据.md
 
 # [UI]
 # [top]
