--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,7 +116,15 @@ nav:
         - documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.8 复杂类型查询.md
         - documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.9 列转行 (Lateral View).md
         - documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.10 加密和脱敏.md
-
+      - 6 查询加速:
+        - 6.1 物化视图:
+          - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.1 物化视图概览.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.2 同步物化视图.md
+          - 6.1.3 异步物化视图:
+            - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.1 原理介绍.md
+            - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.2 功能描述.md
+            - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.3 使用与实践.md
+            - documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.4 常见问题.md
 
 # [UI]
 # [top]
