--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,6 +161,16 @@ nav:
         - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.1 湖仓一体概述.md
         - 7.2 数据湖分析:
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.1 Hive Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.2 Hudi Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.3 Iceberg Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.4 Paimon Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.5 LakeSoul Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.6 BigQuery Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.7 Delta Lake Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.8 Kudu Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.9 阿里云 DLF.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.10 TPCH.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.2 数据湖分析/7.2.11 TPCDS.md
 
 # [UI]
 # [top]
