--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,7 +174,18 @@ nav:
         - 7.3 数据湖构建:
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.1 Hive.md
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.3 数据湖构建/7.3.2 Iceberg.md
-
+        - 7.4 数据库分析:
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.1 JDBC Catalog.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.2 MySQL.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.3 PostgreSQL.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.4 Oracle.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.5 SQL Server.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.6 IBM Db2.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.7 ClickHouse.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.8 SAP HANA.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.9 OceanBase.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.10 Elasticsearch.md
+          - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.11 阿里云 MaxCompute.md
 # [UI]
 # [top]
 theme:
