--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -186,6 +186,13 @@ nav:
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.9 OceanBase.md
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.10 Elasticsearch.md
           - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.11 阿里云 MaxCompute.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.5 分析 S3、HDFS 上的文件.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.6 数据缓存.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.7 元数据缓存.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.8 弹性计算节点.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.9 外表统计信息.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.10 云服务认证接入.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.11 SQL 方言兼容.md
 # [UI]
 # [top]
 theme:
