--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -193,6 +193,14 @@ nav:
         - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.9 外表统计信息.md
         - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.10 云服务认证接入.md
         - documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.11 SQL 方言兼容.md
+      - 8 存算分离:
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.1 概览.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.2 Doris 存算分离模式部署准备.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.3 编译部署.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.4 管理 Storage Vault.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.5 计算组操作.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.6 数据缓存.md
+        - documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.7 Meta Service API 参考.md
 # [UI]
 # [top]
 theme:
