--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ site_description: 梅尔菲斯的个人网站
 nav:
   - ClickHouse:
     - documents/ClickHouse/ClickHouse从入门到精通-初级.md
+    - documents/ClickHouse/ClickHouse从入门到精通-高级.md
+    - documents/ClickHouse/ClickHouse从入门到精通-监控与备份.md
   - Doris:
     - documents/Doris/Doris vs ClickHouse.md
     - documents/Doris/Doris 3.x vs Doris 2.X.md
