--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ site_description: 梅尔菲斯的个人网站
 
 # [Navigtion]
 nav:
+  - Alibaba:
+    - documents/Alibaba/Java开发手册(黄山版).md
   - ClickHouse:
     - documents/ClickHouse/ClickHouse从入门到精通-初级.md
     - documents/ClickHouse/ClickHouse从入门到精通-高级.md
